# easix-admin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRUD_GENERATOR.md  ENHANCED_UI_FEATURES.md  LAYOUT_CHECKLIST.md  LAYOUT_DOCUMENTATION.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  pyproject.toml  rinkas.md  setup.py
easix/: __init__.py  apps.py  signals.py  urls.py  views.py
easix/activity/: __init__.py  models.py  signals.py  views.py
easix/dashboard/: __init__.py  views.py  widgets.py
easix/forms/: __init__.py  config.py  views.py
easix/management/: __init__.py
easix/management/commands/: __init__.py  easix.py
easix/migrations/: 0001_initial.py
easix/permissions/: __init__.py  views.py
easix/static/css/: easix.css
easix/static/js/: easix.js
easix/tables/: __init__.py  config.py  views.py
easix/templates/easix/: base.html
easix/templates/easix/components/: alert.html  avatar.html  badge.html  button.html  card.html  dropdown.html  empty_state.html  file_upload.html  form_field.html  modal.html  pagination.html  search_input.html  tabs.html
easix/templates/easix/pages/: activity_log.html  dashboard.html  login.html  model_delete.html  model_detail.html  model_form.html  model_list.html  permission_list.html  role_form.html  role_list.html  search.html  settings.html  user_form.html  user_list.html
easix/templates/easix/partials/: bottom_nav.html  header.html  sidebar.html
easix/templates/easix/widgets/: activity.html  chart.html  chart_widget.html  quick_actions.html  recent_items.html  stat.html  stat_widget.html
easix/templatetags/: __init__.py  easix_tags.py
example/: README.md
example/example/: __init__.py  settings.py  urls.py  wsgi.py
example/myapp/: __init__.py  apps.py  models.py
example/myapp/migrations/: 0001_initial.py
tests/: __init__.py  settings.py  test_easix.py  urls.py
